--- a/CHANGELOG
+++ b/CHANGELOG
@@ -116,6 +116,8 @@ Fixed Bug #5326: Trying to add an Alternative Proxy spits out PHP warnings.
 Fixed Bug #5334: Workflow escalation custom message are have wrong subject.
 Fixed Bug #5341: Filter Front End User Input - set to 'Filter input' breaking front end layout after parse file commit.
 Fixed Bug #5342: PHP 5.3 E_DEPRECATED warning in installation scripts.
+Fixed Bug #5148: br tag created in the WYSIWYG as soon as it's created.
+Fixed Bug #5327: Linking to image varieties requires a dollar $ sign to work.
 
 Search
 
