--- a/packages/cms/form/form_action_types/form_action_upload_youtube_video/locale/en/lang_strings.xml
+++ b/packages/cms/form/form_action_types/form_action_upload_youtube_video/locale/en/lang_strings.xml
@@ -5,7 +5,7 @@
     <string source="form_action_upload_youtube_video_client_dev_key">Developer key:</string>
 	<string source="form_action_upload_youtube_video_client_credentials_step">Authentication:</string>
 	<string source="form_action_upload_youtube_video_client_credentials_note"><![CDATA[
-    <p>You need to have a Youtube account linked with a Google account. To obtain a Consumer Key and Secret, please see the <a target="_blank" href="http://code.google.com/apis/accounts/docs/RegistrationForWebAppsAuto.html#new">Registration for Web-Based Applications</a> page for an explanation of the registration process.</p>
+    <p>You need to have a YouTube account linked with a Google account. To obtain a Consumer Key and Secret, please see the <a target="_blank" href="http://code.google.com/apis/accounts/docs/RegistrationForWebAppsAuto.html#new">Registration for Web-Based Applications</a> page for an explanation of the registration process.</p>
     <p><strong>Note:</strong> Leave the certificate field blank when completing your registration. Google will generate an OAuth consumer secret value, which will display on your domain's registration page after you have completed the registration process.</p>
     <p>To obtain a Developer Key please visit your <a  target="_blank" href="http://code.google.com/apis/youtube/dashboard/">Account Dashboard</a> page.</p>
     <p>Once you have entered your credentials, there are 3 steps to get authenticated:
@@ -22,7 +22,7 @@
     <string source="form_action_upload_youtube_video_client_credentials_auth_token">Authorise Token</string>
     <string source="form_action_upload_youtube_video_client_credentials_connected"><![CDATA[<strong style="color: #060">Access Token Granted</strong>]]></string>
     <string source="form_action_upload_youtube_video_client_credentials_status_no_consumer"><![CDATA[<strong style="color: #f00">Client credentials missing.</strong>]]></string>
-    <string source="form_action_upload_youtube_video_settings_header">Youtube Video Setup</string>
+    <string source="form_action_upload_youtube_video_settings_header">YouTube Video Setup</string>
     <string source="form_action_upload_youtube_video_settings_note"><![CDATA[
     <p>For the Title, Description and Category, you may either set a fixed value or select a Form Question asset to dynamically populate the value from its submission answer. The Form Question answer takes priority over the fixed value. Category is compulsory. Description is optional. A missing Title will be populated with the video file name.</p>
     <p>The Video Source field is compulsory and must be a File Upload Form Question.</p>
